# tdiscuss

./: .bazelrc  .gitignore  .golangci.yaml  .golangci.yml  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.database-setup.md  README.md  check-go-versions.sh  config.go  config_test.go  crosscompile.bzl  csrf.go  csrf_test.go  db.go  go.mod  go.sum  handlers.go  handlers_placeholder.go  handlers_test.go  helper.bzl  helpers.go  helpers_test.go  main.go  member.go  metrics.go  metrics_test.go  middleware_adapters.go  mocks_test.go  models.go  otel.go  parser.go  parser_test.go  platforms.def.bzl  privacy.go  privacy_test.go  querier.go  queries.sql.go  (+10 more)
.github/workflows/: build.yml  golangci-lint.yml  release.yml  semgrep.yml  test-build-release.yml  test.yml  workflows.yml
cmd/tdiscuss/: BUILD.bazel  main.go
cmd/tdiscuss/tmpl/: header.html  index.html  newthread.html  newtopic.html  thread.html  topic.html  whoami.html
contrib/: tdiscuss.service
contrib/rpm/: tdiscuss.sysconfig
middleware/: BUILD.bazel  board_data.go  exports.go  interfaces.go  middleware_auth.go  middleware_auth_test.go  middleware_core.go  middleware_integration_test.go  middleware_observability.go  middleware_ratelimit.go  middleware_security.go  middleware_setup.go  middleware_test.go
pkg/db/: BUILD.bazel
pkg/discuss/: BUILD.bazel  config.go  db.go  db_test.go  member.go  metrics.go  models.go  queries.sql.go  schema.sql  server.go  server_test.go  thread.go  types.go
pkg/discuss/schema/: posts.sql  topics.sql
pkg/discuss/sqlc/: schema.sql  sqlc.yaml
pkg/discuss/testdata/: error.html  index.html  newtopic.html  topic.html  whoami.html
sqlc/: add_is_blocked_to_member.sql  queries.sql  schema.sql  sqlc.yaml
static/: style.css  theme.js
tmpl/: admin.html  edit-profile.html  edit-thread-post.html  edit-thread.html  error.html  footer.html  formatting.html  header.html  index-thread-partial.html  index.html  member-threads-partial.html  member.html  menu.html  newthread.html  thread.html
