"""tdiscuss messageboard"""

module(
    name = "tdiscuss",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "rules_go")
bazel_dep(name = "gazelle", version = "0.38.0", repo_name = "gazelle")
bazel_dep(name = "rules_pkg", version = "1.0.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_jackc_pgx_v5",
    "com_github_microcosm_cc_bluemonday",
    "com_github_prometheus_client_golang",
    "com_github_yuin_goldmark",
    "com_github_yuin_goldmark_emoji",
    "com_tailscale",
)
