load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "middleware",
    srcs = [
        "board_data.go",
        "exports.go",
        "interfaces.go",
        "middleware_auth.go",
        "middleware_core.go",
        "middleware_observability.go",
        "middleware_ratelimit.go",
        "middleware_security.go",
        "middleware_setup.go",
    ],
    importpath = "github.com/imeyer/tdiscuss/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@io_opentelemetry_go_otel_metric//:metric",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@io_opentelemetry_go_otel//semconv/v1.21.0:v1_21_0",
        "@org_golang_x_time//rate",
    ],
)

go_test(
    name = "middleware_test",
    srcs = [
        "middleware_auth_test.go",
        "middleware_integration_test.go",
        "middleware_test.go",
    ],
    embed = [":middleware"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@io_opentelemetry_go_otel_metric//noop",
        "@io_opentelemetry_go_otel_trace//noop",
    ],
)