# gazelle:prefix github.com/imeyer/tdiscuss
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tdiscuss_lib",
    srcs = ["main.go"],
    embedsrcs = [
        "tmpl/index.html",
        "tmpl/error.html",
        "tmpl/footer.html",
        "tmpl/header.html",
        "tmpl/newthread.html",
        "tmpl/thread.html",
    ],
    importpath = "github.com/imeyer/tdiscuss",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/discuss",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_tailscale//client/tailscale",
        "@com_tailscale//hostinfo",
        "@com_tailscale//tsnet",
    ],
)

go_binary(
    name = "tdiscuss",
    embed = [":tdiscuss_lib"],
    visibility = ["//visibility:public"],
)
