load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "discuss",
    srcs = [
        "config.go",
        "db.go",
        "member.go",
        "models.go",
        "queries.sql.go",
        "server.go",
        "thread.go",
    ],
    importpath = "github.com/imeyer/tdiscuss/pkg/discuss",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgconn",
        "@com_github_jackc_pgx_v5//pgtype",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_tailscale//client/tailscale",
    ],
)
